--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "cargo-strip"
 version = "0.2.0"
 authors = ["Guillaume Valadon <guillaume@valadon.net>"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/guedou/cargo-strip/"
+description = "Strip Rust binaries created with cargo"
 edition = "2018"
 
 [dependencies]
