Strip a binary using the --target argument

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: run
+          args: -- --target armv7-unknown-linux-gnueabihf
