--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: run
-          args: -- --target armv7-unknown-linux-gnueabihf
+          args: -- strip --target armv7-unknown-linux-gnueabihf
